# cpp-project-template

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SConstruct  appveyor.yml  cpp-project-template.files  make.deb.sh
debian/: changelog  control  install  rules
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
doc/source/: conf.py  func.doc  index.doc  index.rst  main.doc
doc/source/_templates/: layout.html
doc/sphinx/: Makefile  conf.py  index.rst
doc/src/: index.dox
proj/qtcreator/: Makefile  cpp-project-template.files  cpp-project-template.includes
src/: CMakeLists.txt  func.cpp  func.h  main.cpp  mymath.cpp  mymath.h
test/: CMakeLists.txt  SConscript  fib_test.cpp  func_test.cpp  main.cpp
tools/: CMakeLists.txt  fib.cpp
